# SoapyIC7610

./: .gitignore  BUILDING.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  SoapyIcom7610.cpp  SoapyIcom7610.h
tools/: soapy_test.py
